@@ -5,6 +5,10 @@
 
 BZFlag 1.7g1
 -------------------------------------------------------
+* remove non-printable characters in callsign in server - Frank Thilo
+* +f sw{5} syntax to add a bunch of flags - Dave Brosius
+* tanks which jump too high get kicked - Dave Brosius
+* server drops bogus shots (anti cheating) - Tim Riker, Dave Brosius, Frank Thilo
 * i18n support in client - Dave Brosius
 * Optional config file interface for bzfs settings - Dave Brosius
 * inline editing of text fields (<- ->) Dave Brosius, Frank Thilo
